--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
         "start": "node ./dist/entry.js",
         "prod": "npm run build && npm run start",
         "copy:swagger": "cpx 'swagger.json' './dist'",
-        "swagger-autogen": "node swagger.js"
+        "test": "mocha -r ts-node/register 'test/**/*.ts'"
     },
     "author": "",
     "license": "MIT",
     "dependencies": {
         "@prisma/client": "^3.14.0",
         "@types/express": "^4.17.13",
+        "@types/mocha": "^9.1.1",
+        "chai": "^4.3.6",
         "docker-compose": "^0.23.17",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "mocha": "^10.0.0",
         "morgan": "^1.10.0",
         "rimraf": "3.0.2",
         "swagger-autogen": "^2.21.2",
