--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     },
     "author": "",
     "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^17.0.34",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.4"
+    },
     "dependencies": {
         "@prisma/client": "^3.14.0",
         "@types/express": "^4.17.13",
