--- a/package.json
+++ b/package.json
@@ -8,24 +8,29 @@
         "start": "node ./dist/entry.js",
         "prod": "npm run build && npm run start",
         "copy:swagger": "cpx 'swagger.json' './dist'",
-        "test": "mocha -r ts-node/register 'test/**/*.ts'"
+        "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+        "test:verbose": "jest --passWithNoTests --runInBand",
+        "test:unit": "npm test -- -c jest-unit-config.ts",
+        "test:integration": "npm test -- -c jest-integration-config.ts",
+        "test:staged": "npm test -- --findRelatedTests --watchAll=false",
+        "test:ci": "npm test -- --coverage"
     },
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "@types/jest": "^27.5.1",
         "@types/node": "^17.0.34",
+        "jest": "^28.1.0",
+        "ts-jest": "^28.0.2",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.4"
     },
     "dependencies": {
         "@prisma/client": "^3.14.0",
         "@types/express": "^4.17.13",
-        "@types/mocha": "^9.1.1",
-        "chai": "^4.3.6",
         "docker-compose": "^0.23.17",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
-        "mocha": "^10.0.0",
         "morgan": "^1.10.0",
         "rimraf": "3.0.2",
         "swagger-autogen": "^2.21.2",
