--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "devDependencies": {
         "@types/jest": "^27.5.1",
         "@types/node": "^17.0.34",
+        "@typescript-eslint/eslint-plugin": "^4.33.0",
+        "eslint": "^7.32.0",
+        "eslint-config-standard-with-typescript": "^21.0.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.2.0",
         "jest": "^28.1.0",
         "ts-jest": "^28.0.2",
         "ts-node": "^10.7.0",
