--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "compilerOptions": {
+        "module": "commonjs",
+        "target": "es2019",
         "esModuleInterop": true,
+        "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
         "outDir": "./dist",
