--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.2.0",
+        "git-commit-msg-linter": "^3.2.8",
+        "lint-staged": "^12.4.1",
+        "husky": "^4.3.8",
         "jest": "^28.1.0",
         "ts-jest": "^28.0.2",
         "ts-node": "^10.7.0",
