--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.3'
 services:
   db:
-    image: mysql:5.7
+    platform: linux/x86_64
+    image: mysql
     restart: always
     environment:
       MYSQL_DATABASE: 'db'
