--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "main": "entry.js",
     "scripts": {
         "build": "rimraf ./dist && tsc -p ./tsconfig.json && npm run copy:swagger",
-        "dev": "ts-node-dev --exit-child ./src/entry.ts",
-        "start": "node ./dist/entry.js",
+        "dev": "NODE_ENV=dev ts-node-dev --exit-child ./src/server/initializer.ts",
+        "start": "node ./dist/server/initializer.js",
         "prod": "npm run build && npm run start",
         "copy:swagger": "cpx 'swagger.json' './dist'",
         "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
