--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "license": "MIT",
     "devDependencies": {
         "@types/jest": "^27.5.1",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.34",
         "@types/swagger-ui-express": "^4.1.3",
         "@typescript-eslint/eslint-plugin": "^4.33.0",
