--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "swagger-autogen": "^2.21.2",
         "swagger-ui-express": "^4.4.0",
         "ts-node-dev": "^2.0.0",
-        "winston": "^3.7.2"
+        "winston": "^3.7.2",
+        "tsyringe": "4.7.0",
+        "reflect-metadata": "0.1.13"
     }
 }
