--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
         "outDir": "./dist",
         "rootDir": ".",
         "sourceRoot": "./src",
-        "sourceMap": true
+        "sourceMap": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": [
         "**/*.ts"
