--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
     "rules": {
         "@typescript-eslint/strict-boolean-expressions": "off",
         "@typescript-eslint/consistent-type-definitions": "off",
-        "@typescript-eslint/no-floating-promises": "off"
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/no-extraneous-class": "off",
+        "@typescript-eslint/no-misused-promises": "off"
     }
 }
